--- a/.github/workflows/build_cas_system_OneDrivePush -T - test.yml
+++ b/.github/workflows/build_cas_system_OneDrivePush -T - test.yml
@@ -84,7 +84,7 @@ jobs:
         run: |
           # 替换为K40S的selinux
           #sudo rm -rf "$GITHUB_WORKSPACE"/${{ env.device }}/vendor/etc/selinux
-          sudo mv -f "$GITHUB_WORKSPACE"/images/vendor_munch/etc/selinux "$GITHUB_WORKSPACE"/${{ env.device }}/vendor/etc/selinux
+          sudo mv -f "$GITHUB_WORKSPACE"/images/vendor_munch/etc/selinux "$GITHUB_WORKSPACE"/${{ env.device }}/vendor/etc
           sudo rm -rf "$GITHUB_WORKSPACE"/images/vendor_munch
           # 修改cas的/vendor/build.prop
           sudo sed -i 's/ro.build.version.release=12/ro.build.version.release=13/g' "$GITHUB_WORKSPACE"/${{ env.device }}/vendor/build.prop
