--- a/.github/workflows/build_cas_system_OneDrivePush -T - test.yml
+++ b/.github/workflows/build_cas_system_OneDrivePush -T - test.yml
@@ -31,7 +31,7 @@ jobs:
           unzip -P ${{ secrets.PASSWORD }} "$GITHUB_WORKSPACE"/tools/rclone_test.zip -d ~/.config/rclone/
       - name: 2.发送开始构建通知
         run: |
-          curl -i -X POST -H 'Content-type':'application/json' -d '{"token":"${{ secrets.APPTOKEN2 }}","title":"小米10 Ultra ${{ env.date }}开始构建","content":" **小米10 Ultra ${{ env.date }}开始构建** ","topic":"cas","template":"markdown"}' http://www.pushplus.plus/send || true
+          curl -i -X POST -H 'Content-type':'application/json' -d '{"token":"${{ secrets.APPTOKEN2 }}","title":"小米10 Ultra ${{ env.date }}开始构建","content":" **小米10 Ultra ${{ env.date }}开始构建** ","template":"markdown"}' http://www.pushplus.plus/send || true
           echo 开始打包
       - name: 3.下载系统包
         run: |
@@ -166,7 +166,7 @@ jobs:
           rclone sync -P ./zip/* OneDrive:/MI_Packages/RubbishBin/CAS_Packages
       - name: 8.发送打包成功通知
         run: |
-          curl -i -X POST -H 'Content-type':'application/json' -d '{"token":"${{ secrets.APPTOKEN2 }}","title":"小米10 Ultra ${{ env.date }}已构建完成","content":" **小米10 Ultra ${{ env.date }}已构建完成** \n \n **包名：${{ env.NEW_PACKAGE_NAME }}** \n \n **MD5：${{ env.MD5 }}** \n \n **下载地址为：[https://onedrive.zjw.js.cn/Direct/RubbishBin/${{ env.NEW_PACKAGE_NAME }}](https://onedrive.zjw.js.cn/Direct/RubbishBin/${{ env.NEW_PACKAGE_NAME }})** ","topic":"cas","template":"markdown"}' http://www.pushplus.plus/send || true
+          curl -i -X POST -H 'Content-type':'application/json' -d '{"token":"${{ secrets.APPTOKEN2 }}","title":"小米10 Ultra ${{ env.date }}已构建完成","content":" **小米10 Ultra ${{ env.date }}已构建完成** \n \n **包名：${{ env.NEW_PACKAGE_NAME }}** \n \n **MD5：${{ env.MD5 }}** \n \n **下载地址为：[https://onedrive.live.com/?id=845A2679CADA7934%214059&cid=845A2679CADA7934/${{ env.NEW_PACKAGE_NAME }}](https://onedrive.live.com/?id=845A2679CADA7934%214059&cid=845A2679CADA7934/${{ env.NEW_PACKAGE_NAME }})** ","template":"markdown"}' http://www.pushplus.plus/send || true
           echo 上传成功  
       - name: 9.删除工作流运行
         uses: Mattraks/delete-workflow-runs@v2
